adding library to the navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav aria-label="Main Navigation">
             <a href="#">LinkedIn</a>
             <a href="#">I-Learn</a>
-            <a href="#">Scripture</a>
+            <a href="#">Library</a>
             <a href="#">Final Project</a>
         </nav>
     </header>
