--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                         my name is ayodele daniel i am 22 years old
                         i live in nigeria i love coding and playing football
                     </p>
-                    <img src="https://picsum.photos/150"
-                        alt="Rubia (also known as Ruby), head-and-shoulders portrait facing the camera with a warm smile; casual clothing; neutral indoor background suggesting a home setting; no visible text">
+                    <img src="week01/images/profile.png"
+                        alt="daniel">
                 </div>
         
 
