--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        <h2 class="name">Ayodele Daniel</h2>
+        <h1>Your Name</h1>
 
         <section class="grid">
             <section class="card">
