redefine index and base.css

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
                 nature walks and cultural sites make it peaceful, inspiring, and a place I am proud to call home.
             </p>
         </section>
+
+        <section class="card resources" aria-labelledby="resources-title">
+        <h2 id="resources-title">Web Dev Resources</h2>
+        <ul class="resource-list">
+            <li><a href="https://developer.mozilla.org/MDN Web Docs" target="_blank" rel="noopener">MDN Web Docs</a></li>
+            <li><a href="https://web.dev/learn/web.dev (Learn)" target="_blank" rel="noopener">Web.dev Learn</a></li>
+            <li><a href="https://www.smashingmagazine.com/" target="_blank" rel="noopener">Smashing Magazine</a></li>
+            <li><a href="https://caniuse.com/" target="_blank" rel="noopener">Can I Use</a></li>
+            <li><a href="https://css-tricks.com/CSS‑Tricks" target="_blank" rel="noopener">CSS Tricks</a></li>
+            <li><a href="https://frontendmasters.com/guides/learning-roadmap/" target="_blank" rel="noopener">Frontend Masters Learning Roadmap</a></li>
+        </ul>
+        </section>
+
     </main>
 
     <footer>
