--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li><a href="https://web.dev/learn/web.dev (Learn)" target="_blank" rel="noopener">Web.dev Learn</a></li>
             <li><a href="https://www.smashingmagazine.com/" target="_blank" rel="noopener">Smashing Magazine</a></li>
             <li><a href="https://caniuse.com/" target="_blank" rel="noopener">Can I Use</a></li>
-            <li><a href="https://css-tricks.com/CSS‑Tricks" target="_blank" rel="noopener">CSS Tricks</a></li>
+            <li><a href="https://w3schools.com" target="_blank" rel="noopener">W3 Schools</a></li>
             <li><a href="https://frontendmasters.com/guides/learning-roadmap/" target="_blank" rel="noopener">Frontend Masters Learning Roadmap</a></li>
         </ul>
         </section>
