--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description"
         content="WDD 131 - Dynamic Web Fundamentals, Ayodele Daniel, personal homepage, coursework, web development learning.">
     <meta name="author" content="Ayodele Daniel">
-    <link rel="stylesheet" href="week01/styles/base.css">
+    <link rel="stylesheet" href="/styles/base.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
         <section class="card">
             <h2>About Me</h2>
-            <img src="week01/images/profile.png" alt="Ayodele Daniel">
+            <img src="/images/profile.png" alt="Ayodele Daniel">
             <p>
                 I'm Ayodele Daniel, a web developer studying Dynamic Web Fundamentals. I enjoy building websites,
                 learning JavaScript and CSS, and exploring new web technologies. In my free time I like Cooking,
@@ -40,7 +40,7 @@
 
         <section class="card">
             <h2>Abuja, Nigeria</h2>
-            <img src="week01/images/place.webp" alt="Abuja, Nigeria">
+            <img src="/images/place.webp" alt="Abuja, Nigeria">
             <p>
                 I love Abuja for its blend of modern city life and natural beauty, from the calm presence of Aso Rock
                 to the green parks and quiet neighborhoods. The pleasant climate, friendly community, and easy access to
@@ -51,10 +51,13 @@
         <section class="card resources" aria-labelledby="resources-title">
         <h2 id="resources-title">Web Dev Resources</h2>
         <ul class="resource-list">
+            <li><a href="https://dev.to/" target="_blank" rel="noopener">Dev.to Community</a></li>
             <li><a href="https://www.smashingmagazine.com/" target="_blank" rel="noopener">Smashing Magazine</a></li>
-            <li><a href="https://caniuse.com/" target="_blank" rel="noopener">Can I Use</a></li>
-            <li><a href="https://w3schools.com" target="_blank" rel="noopener">W3 Schools</a></li>
-            <li><a href="https://frontendmasters.com/guides/learning-roadmap/" target="_blank" rel="noopener">Frontend Masters Learning Roadmap</a></li>
+            <li><a href="https://css-tricks.com/" target="_blank" rel="noopener">CSS Tricks</a></li>
+            <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener">W3 Schools</a></li>
+            <li><a href="https://www.udemy.com/" target="_blank" rel="noopener">Udemy</a></li>
+            <li><a href="https://picsum.photos/" target="_blank" rel="noopener">Lorem Picsum Image Placeholder</a></li>
+           
         </ul>
         </section>
 
@@ -68,7 +71,7 @@
     </footer>
 
 
-    <script src="week01/scripts/getdates.js"></script>
+    <script src="/scripts/getdates.js"></script>
 </body>
 
 </html>
