--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <meta name="description"
         content="WDD 131 - Dynamic Web Fundamentals, Ayodele Daniel, personal homepage, coursework, web development learning.">
     <meta name="author" content="Ayodele Daniel">
-    <link rel="stylesheet" href="/styles/base.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -71,7 +75,7 @@
     </footer>
 
 
-    <script src="/scripts/getdates.js"></script>
+    <script src="scripts/getdates.js"></script>
 </body>
 
 </html>
