--- a/temples.html
+++ b/temples.html
@@ -8,7 +8,7 @@
     <title>Temple Album - Ayodele Daniel</title>
     <meta name="description" content="WDD 131 - Temple Album, responsive gallery with hamburger menu and filtering." />
     <meta name="author" content="Ayodele Daniel" />
-<link rel="stylesheet" href="/styles/temples.css">
+<link rel="stylesheet" href="styles/temples.css">
 <link rel="stylesheet" href="styles/temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
         </header>
 
         <main>
-            <h2 class="page-title">Temple Album</h2>
+            <h2 class="page-title">Home</h2>
 
             <!-- Gallery container; JS will populate <figure> items here -->
             <section id="gallery" class="gallery" aria-live="polite">
