--- a/temples.html
+++ b/temples.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <script defer src="scripts/temples.js" ></script>
+</head>
 <body>
   <header class=" site-header">
         <div class="brand">
