--- a/place.html
+++ b/place.html
@@ -14,7 +14,7 @@
 
     <!-- Stylesheets -->
 <link rel="stylesheet" href="styles/place.css">
-<link rel="stylesheet" href="styles/place_large.css">
+<!-- <link rel="stylesheet" href="styles/place_large.css"> -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
