--- a/place.html
+++ b/place.html
@@ -72,6 +72,27 @@
                     <section class="section weather" aria-labelledby="weather-title">
                         <div class="weather__header">
                             <!-- SVG icon is visible in mobile; hidden on wider view via CSS -->
+                            <svg class="icon-weather icon-mobile-only" viewBox="0 0 64 64" aria-hidden="true" focusable="false">
+                                <title>Partly Cloudy</title>
+                                <!-- Sun -->
+                                <circle cx="22" cy="22" r="8" fill="currentColor" opacity="0.9"></circle>
+                                <!-- Rays -->
+                                <g stroke="currentColor" stroke-width="2" stroke-linecap="round" opacity="0.9">
+                                    <line x1="22" y1="6" x2="22" y2="12"></line>
+                                    <line x1="22" y1="32" x2="22" y2="38"></line>
+                                    <line x1="6" y1="22" x2="12" y2="22"></line>
+                                    <line x1="32" y1="22" x2="38" y2="22"></line>
+                                    <line x1="11" y1="11" x2="15" y2="15"></line>
+                                    <line x1="29" y1="29" x2="33" y2="33"></line>
+                                    <line x1="11" y1="33" x2="15" y2="29"></line>
+                                    <line x1="29" y1="15" x2="33" y2="11"></line>
+                                </g>
+                                <!-- Cloud -->
+                                <path fill="currentColor"
+                                    d="M41 28c-2.4-6.3-11.3-7.2-14.9-1.6A10.5 10.5 0 0026 26c-5.5 0-10 4.2-10 9.3S10.9 45 16.4 45H43c5 0 9-3.6 9-8s-4-9-9-9c-.7 0-1.4.1-2 .2z">
+                                </path>
+                            </svg>
+
                             <h2 id="weather-title">Weather</h2>
                         </div>
 
