--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -138,7 +138,7 @@
                 <img src="./images/wireframe-desktop.png" alt="Desktop wireframe for a portfolio site displaying a horizontal layout with a top navigation bar containing site title and menu links, a hero section split into two columns with a photo placeholder on the left and introductory tagline text on the right, a projects section organized in a 3-to-4 column grid of project cards, a skills section displayed as an icon grid, a full-width contact form, and a footer spanning the entire bottom with social links and copyright information.">
 
     <!-- VALIDATION / TESTING -->
-    <section aria-labelledby=" testing">
+    <!-- <section aria-labelledby=" testing">
                 <h2 id="testing">Validation &amp; Testing Plan</h2>
                 <ul>
                     <li>Validate HTML with the W3C validator and resolve any errors or warnings.</li>
@@ -146,7 +146,7 @@
                     <li>Run Lighthouse (mobile &amp; desktop) for Performance, Accessibility, Best Practices, and SEO.
                     </li>
                 </ul>
-        </section>
+        </section> -->
     </main>
 
     <footer class="container">
