correction on the wireframe setting

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -107,11 +107,16 @@
                 adopt a web font if needed.</p>
         </section>
 
-        <!-- WIREFRAMES -->
+        <!-- WIREFRAME -->
         <section aria-labelledby="wireframes">
             <h2 id="wireframes">Wireframe</h2>
 
             <h3>Mobile Layout</h3>
+            <figure class="wf">
+                <img src="./images/wireframe-mobile.png"
+                    alt="Mobile wireframe showing a vertical single-column layout with header containing site title and menu toggle at top, followed by hero section with photo placeholder on left and tagline text on right, about section, stacked project cards, skills list, contact form, and footer with social links at bottom.">
+            </figure>
+
             <ul>
                 <li>Header with site title and menu toggle</li>
                 <li>Hero: photo + tagline</li>
@@ -121,22 +126,23 @@
                 <li>Contact form</li>
                 <li>Footer with social links and references link</li>
             </ul>
-
+       
             <h3>Desktop Layout</h3>
-            <figure class="wf">
-                <img src="./images/wireframe-mobile.png" alt="Mobile wireframe showing a vertical single-column layout with header containing site title and menu toggle at top, followed by hero section with photo placeholder on left and tagline text on right, about section, stacked project cards, skills list, contact form, and footer with social links at bottom.">
-      <ul>
+            <figure class=" wf">
+                <img src="./images/wireframe-desktop.png"
+                    alt="Desktop wireframe for a portfolio site displaying a horizontal layout with a top navigation bar containing site title and menu links, a hero section split into two columns with a photo placeholder on the left and introductory tagline text on the right, a projects section organized in a 3-to-4 column grid of project cards, a skills section displayed as an icon grid, a full-width contact form, and a footer spanning the entire bottom with social links and copyright information.">
+            </figure>
+
+        <ul>
         <li>Top navigation bar</li>
         <li>Hero split layout: image left, intro right</li>
         <li>Projects grid (3–4 cards)</li>
         <li>Skills grid with icons</li>
         <li>Contact form full width</li>
         <li>Footer across the bottom</li>
-      </ul>
-
-      <figure class=" wf">
-                <img src="./images/wireframe-desktop.png" alt="Desktop wireframe for a portfolio site displaying a horizontal layout with a top navigation bar containing site title and menu links, a hero section split into two columns with a photo placeholder on the left and introductory tagline text on the right, a projects section organized in a 3-to-4 column grid of project cards, a skills section displayed as an icon grid, a full-width contact form, and a footer spanning the entire bottom with social links and copyright information.">
-
+         </ul>
+      </section>     
+     
     <!-- VALIDATION / TESTING -->
     <!-- <section aria-labelledby=" testing">
                 <h2 id="testing">Validation &amp; Testing Plan</h2>
@@ -150,7 +156,7 @@
     </main>
 
     <footer class="container">
-        <p>© <span id="year"></span> Daniel Ayodele • references.htmlReferences</a></p>
+        <p>© <a href="./references.html">References</a><span id="year"></span> Daniel Ayodele • references.html</a></p>
         <script>
             /* Optional small enhancement; remove if not allowed. */
             document.getElementById('year').textContent = new Date().getFullYear();
