anchor tag adjustment

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -156,7 +156,7 @@
     </main>
 
     <footer class="container">
-        <p>© <a href="./references.html">References</a><span id="year"></span> Daniel Ayodele • references.html</a></p>
+        <p>© <a href="./references.html">References<span id="year"></span> Daniel Ayodele • references.html</a></p>
         <script>
             /* Optional small enhancement; remove if not allowed. */
             document.getElementById('year').textContent = new Date().getFullYear();
