The code has been fixed according to the validation report. The form action has been changed from "./review.html" to "review.html", and the script tags have been updated to include the defer attribute for proper loading. This should resolve the HTML validation error and meet the JavaScript requirements.

--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
     </header>
 
     <main class="container">
-        <form action="./review.html" method="get">
+        <form action="review.html" method="get">
             <!-- PRODUCT NAME -->
             <div class="form-row">
                 <label for="productName">Product Name <span aria-hidden="true">*</span></label>
@@ -109,8 +109,8 @@
         <p>© <span id="year"></span> Daniel Ayodele • <a href="./references.html">References</a></p>
     </footer>
 
-    <script src="./scripts/products.js"></script>
-    <script src="./scripts/form.js"></script>
+    <script src="./scripts/products.js" defer></script>
+    <script src="./scripts/form.js" defer></script>
 </body>
 
 </html>
