--- a/review.html
+++ b/review.html
@@ -8,7 +8,8 @@
     <meta name="description"
         content="Thank you page confirming your product review submission with total reviews counter.">
     <meta name="author" content="Daniel Ayodele">
-    <link rel="stylesheet" href="/styles/form.css">
+    <link rel="stylesheet" href="./styles/form.css">
+    <script src="./scripts/review.js" defer></script>
 </head>
 
 <body>
@@ -39,7 +40,7 @@
         <p>© <span id="year"></span> Daniel Ayodele • <a href="./references.html">References</a></p>
     </footer>
 
-    <script src="./scripts/review.js"></script>
+
 </body>
 
 </html>
