--- a/project/reference.html
+++ b/project/reference.html
@@ -54,10 +54,11 @@
         <!-- References Section -->
         <section class="section">
             <div class="container">
-                <p style="text-align: center; color: var(--text-light); margin-bottom: var(--spacing-xl);">
+                <p class="text-center text-light mb-xl">
                     This page contains references for all external resources used in building this website,
                     including images, icons, and any referenced materials.
                 </p>
+
 
                 <ul class="references-list">
                     <li>
@@ -95,7 +96,8 @@
                     <li>
                         <h3>Web Development Resources</h3>
                         <p><strong>Description:</strong> Documentation and tutorials referenced for best practices</p>
-                        <ul style="margin-top: var(--spacing-sm);">
+                        <ul class="mt-sm">
+
                             <li><a href="https://developer.mozilla.org/" target="_blank" rel="noopener noreferrer">MDN
                                     Web Docs</a> - HTML, CSS, JavaScript documentation</li>
                             <li><a href="https://web.dev/" target="_blank" rel="noopener noreferrer">web.dev</a> - Web
@@ -130,22 +132,23 @@
                 </ul>
 
                 <!-- Attribution -->
-                <div
-                    style="margin-top: var(--spacing-2xl); padding: var(--spacing-lg); background-color: var(--bg-light); border-radius: var(--border-radius); text-align: center;">
+                <div class="acknowledgments-box">
                     <h3>Acknowledgments</h3>
-                    <p style="color: var(--text-light); margin-top: var(--spacing-md);">
+                    <p class="text-light mt-md">
                         This portfolio website was created as a personal project to showcase web development skills.
                         All content, unless otherwise noted, is original work.
                     </p>
-                    <p style="color: var(--text-light); margin-top: var(--spacing-sm);">
+                    <p class="text-light mt-sm">
                         &copy; <span id="year"></span> Daniel Ayodele. All rights reserved.
                     </p>
                 </div>
 
+
                 <!-- Back to Home Link -->
-                <div style="text-align: center; margin-top: var(--spacing-xl);">
+                <div class="back-to-home">
                     <a href="./index.html" class="btn btn-primary">Back to Home</a>
                 </div>
+
             </div>
         </section>
     </main>
