--- a/project/index.html
+++ b/project/index.html
@@ -14,6 +14,9 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./styles/portfolio.css">
+
+    <!-- JavaScript -->
+    <script src="./scripts/portfolio.js" defer></script>
 </head>
 
 <body>
@@ -77,7 +80,7 @@
                         </div>
                     </div>
                     <div class="hero-image">
-                        <img src="./images/profile.png" alt="Daniel Ayodele - Web Developer" width="400" height="400">
+                        <img src="./images/daniel-lap.png" alt="Daniel Ayodele - Web Developer" width="400" height="400">
                         <div class="hero-image-decoration"></div>
                     </div>
                 </div>
@@ -151,15 +154,14 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="text-center">Featured Projects</h2>
-                    <p class="text-center"
-                        style="color: var(--text-light); max-width: 600px; margin: var(--spacing-md) auto var(--spacing-xl);">
+                    <p class="text-center section-description">
                         Here are some of my recent projects that showcase my skills and expertise in web development
                     </p>
                 </div>
                 <div class="featured-projects" id="featured-projects">
                     <!-- Featured projects will be dynamically loaded from JavaScript -->
                 </div>
-                <div class="text-center" style="margin-top: var(--spacing-xl);">
+                <div class="text-center mt-xl">
                     <a href="./project.html" class="btn btn-primary">View All Projects</a>
                 </div>
             </div>
@@ -170,8 +172,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="text-center">What I Do</h2>
-                    <p class="text-center"
-                        style="color: var(--text-light); max-width: 600px; margin: var(--spacing-md) auto var(--spacing-xl);">
+                    <p class="text-center section-description">
                         I offer a range of web development services tailored to meet your specific needs
                     </p>
                 </div>
@@ -234,8 +235,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="text-center">Skills & Technologies</h2>
-                    <p class="text-center"
-                        style="color: var(--text-light); max-width: 600px; margin: var(--spacing-md) auto var(--spacing-xl);">
+                    <p class="text-center section-description">
                         The tools and technologies I use to bring ideas to life
                     </p>
                 </div>
@@ -250,8 +250,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="text-center">What Clients Say</h2>
-                    <p class="text-center"
-                        style="color: var(--text-light); max-width: 600px; margin: var(--spacing-md) auto var(--spacing-xl);">
+                    <p class="text-center section-description">
                         Feedback from some of the amazing clients I've had the pleasure to work with
                     </p>
                 </div>
@@ -265,7 +264,7 @@
                             <div class="testimonial-avatar">JM</div>
                             <div>
                                 <strong>John Miller</strong>
-                                <p style="margin: 0; color: var(--text-light); font-size: var(--font-size-sm);">CEO,
+                                <p class="contact-info-paragraph-sm">CEO,
                                     TechStart Inc.</p>
                             </div>
                         </div>
@@ -279,7 +278,7 @@
                             <div class="testimonial-avatar">SK</div>
                             <div>
                                 <strong>Sarah Kim</strong>
-                                <p style="margin: 0; color: var(--text-light); font-size: var(--font-size-sm);">Founder,
+                                <p class="contact-info-paragraph-sm">Founder,
                                     DesignCo</p>
                             </div>
                         </div>
@@ -293,7 +292,7 @@
                             <div class="testimonial-avatar">RB</div>
                             <div>
                                 <strong>Robert Brown</strong>
-                                <p style="margin: 0; color: var(--text-light); font-size: var(--font-size-sm);">
+                                <p class="contact-info-paragraph-sm">
                                     Marketing Director, GrowthLabs</p>
                             </div>
                         </div>
@@ -357,64 +356,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- JavaScript -->
-    <script src="./scripts/portfolio.js"></script>
-    <script>
-        // Render featured projects for homepage
-        function renderFeaturedProjects() {
-            const container = document.getElementById('featured-projects');
-            if (!container) return;
-
-            // Filter featured projects
-            const featuredProjects = projects.filter(project => project.featured).slice(0, 3);
-
-            const projectsHTML = featuredProjects
-                .map(
-                    (project) => `
-                    <article class="project-card animate-fade-in">
-                        <img src="${project.image}" 
-                             alt="${project.title} project preview" 
-                             class="project-image" 
-                             loading="lazy"
-                             width="400"
-                             height="200">
-                        <div class="project-content">
-                            <h3 class="project-title">${project.title}</h3>
-                            <p class="project-description">${project.description}</p>
-                            <div class="project-tech">
-                                ${project.tech.map((tech) => `<span class="tech-tag">${tech}</span>`).join("")}
-                            </div>
-                            <div class="project-links">
-                                <a href="${project.github}" target="_blank" rel="noopener noreferrer" class="project-link">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                                    </svg>
-                                    Code
-                                </a>
-                                <a href="${project.demo}" target="_blank" rel="noopener noreferrer" class="project-link">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                        <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                                        <polyline points="15 3 21 3 21 9"></polyline>
-                                        <line x1="10" y1="14" x2="21" y2="3"></line>
-                                    </svg>
-                                    Live Demo
-                                </a>
-                            </div>
-                        </div>
-                    </article>
-                `,
-                )
-                .join("");
-
-            container.innerHTML = projectsHTML;
-        }
-
-        // Initialize featured projects on page load
-        document.addEventListener('DOMContentLoaded', function () {
-            renderFeaturedProjects();
-        });
-    </script>
 </body>
 
 </html>
